--- a/src/app/shared/modules/backendErrorMessages/components/backend-error-messages/backend-error-messages.component.html
+++ b/src/app/shared/modules/backendErrorMessages/components/backend-error-messages/backend-error-messages.component.html
@@ -1,1 +1,3 @@
-<p>backend-error-messages works!</p>
+<ul class="errors__list">
+    <li *ngFor="let error of errorMessages" class="errors__item">{{error}}</li>
+</ul>
