--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,7 +3,7 @@
         <h2>Sign in</h2>
         <a [routerLink]="['/register']">Need an account?</a>
       </header>
-      <!-- <mc-backend-error-messages></mc-backend-error-messages> -->
+      <mc-backend-error-messages *ngIf="backendErrors$ | async" [backendErrors]="backendErrors$ | async"></mc-backend-error-messages>
       <form [formGroup]="form" class="auth__form" (ngSubmit)="onLogin()">
         <fieldset>
           <fieldset>
