--- a/src/app/shared/modules/navbar/components/navbar/navbar.component.scss
+++ b/src/app/shared/modules/navbar/components/navbar/navbar.component.scss
@@ -20,6 +20,12 @@
             margin-left: 20px;
             cursor: pointer;
 
+            .navbar__img{
+                height: 28px;
+                margin: -10px;
+                border-radius: 50%
+            }
+
             &:hover{
                 color: rgb(44, 42, 42);
             }
