--- a/src/app/global-feed/global-feed/global-feed.component.html
+++ b/src/app/global-feed/global-feed/global-feed.component.html
@@ -1,2 +1,8 @@
-<p>global-feed works!</p>
-<mc-feed></mc-feed>
+<mc-banner></mc-banner>
+<section>
+    <div class="feed">
+        <mc-feed  [apiUrl]="apiUrl"></mc-feed>
+    </div>
+    <div>Popular Tags</div>
+</section>
+
